--- a/edulogy_ui/src/sass/_home.scss
+++ b/edulogy_ui/src/sass/_home.scss
@@ -39,7 +39,8 @@
       border-radius: 0;
       color: white;
     }
-    button:hover {
+    button:hover,
+    button.active {
       background: $test-page-main-color;
     }
   }
