--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -19,6 +19,9 @@ button {
 a {
   color: #006eff; }
 
+.w100 {
+  width: 100%; }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -533,42 +536,6 @@ button.dropdown-item {
     margin-right: 0em;
     width: 10em; } }
 
-.banner {
-  width: 100%;
-  height: fit-content;
-  position: relative; }
-  .banner .img-container {
-    display: block;
-    width: 100%;
-    padding-top: 23.5%;
-    /* 1:1 Aspect Ratio */
-    position: relative; }
-    .banner .img-container img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-    .banner .img-container .mobile-display {
-      display: none; }
-
-@media only screen and (max-width: 600px) {
-  .banner .img-container {
-    padding-top: 37.5%; } }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) and (max-width: 768px) {
-  .banner > div {
-    box-shadow: inset 0 0 10em black; } }
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .banner > div {
-    box-shadow: inset 0 0 15em black; } }
-
 .footer {
   position: relative;
   height: fit-content;
@@ -694,6 +661,351 @@ button.dropdown-item {
   .footer {
     padding-left: 16%;
     padding-right: 16%; } }
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 3;
+  display: none; }
+
+.modal.active {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.info-popup {
+  background-color: white; }
+  .info-popup form {
+    width: auto !important;
+    max-width: 100vw;
+    display: block !important;
+    box-shadow: 0 0 2px 0 #757575;
+    min-height: 420px;
+    padding: 1em; }
+    .info-popup form button {
+      width: 5em;
+      height: 2.25em;
+      font-size: 1em;
+      margin: auto;
+      margin-top: 1em;
+      display: block;
+      color: white;
+      background: #0080bb; }
+    .info-popup form button.cancel-btn {
+      background-color: #b94848; }
+    .info-popup form h3 {
+      text-align: center; }
+    .info-popup form input {
+      display: block;
+      height: 2.5em;
+      line-height: 2.5em;
+      width: 100%;
+      padding-left: 0.5em; }
+    .info-popup form input[type="checkbox"] {
+      height: 1.25em;
+      line-height: 1.25em;
+      width: 1.25em;
+      display: block;
+      margin-right: 1em;
+      margin-left: 1.5em; }
+    .info-popup form input[type="file"] {
+      width: 15em;
+      height: auto;
+      line-height: normal; }
+    .info-popup form input[type="text"],
+    .info-popup form input[type="number"] {
+      border: 1px solid #333; }
+    .info-popup form label {
+      display: block; }
+    .info-popup form .col {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      width: 300px; }
+    .info-popup form > div > div > label {
+      height: 2.25em;
+      line-height: 2.25em; }
+    .info-popup form .row {
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin-top: 0.25em; }
+    .info-popup form > .row {
+      margin-top: 0.5em; }
+
+.confirm-popup {
+  padding: 1em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  background: white;
+  border-radius: 0.25em;
+  max-width: 100vw;
+  min-width: 300px;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 1.5em;
+  text-align: center; }
+  .confirm-popup .confirm-btn,
+  .confirm-popup .cancel-btn {
+    width: 5em;
+    height: 2.5em;
+    color: white;
+    margin-top: 1em; }
+  .confirm-popup .confirm-btn {
+    background-color: #00949e; }
+  .confirm-popup .cancel-btn {
+    background-color: #b94848;
+    margin-left: 0.5em; }
+
+.status-popup {
+  padding: 1em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  background: white;
+  border-radius: 0.25em;
+  max-width: 100vw;
+  min-width: 300px;
+  min-height: 200px;
+  line-height: 1.5em;
+  text-align: center;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .status-popup button {
+    width: 5em;
+    height: 2.5em;
+    background: #00949e;
+    color: white;
+    margin-top: 1em;
+    display: block; }
+
+.score-popup {
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
+  width: 300px;
+  height: 400px;
+  background: white;
+  border-radius: 0.25em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25em;
+  position: relative; }
+  .score-popup button {
+    top: 20px;
+    right: 20px;
+    position: absolute;
+    width: 1.75em;
+    height: 1.75em;
+    border-radius: 0.25em;
+    background: #ff6666;
+    color: white; }
+  .score-popup > div {
+    cursor: pointer;
+    width: 6em;
+    height: 2.5em;
+    border: 1px #333 solid;
+    text-align: center;
+    line-height: 2.5em;
+    border-radius: 0.25em;
+    margin-top: 2em;
+    font-size: 0.75em !important; }
+  .score-popup span {
+    margin-top: 1em;
+    width: 7em;
+    height: 7em;
+    line-height: 7em;
+    font-weight: lighter;
+    text-align: center;
+    border-radius: 100%;
+    background: #00949e;
+    color: white;
+    display: block; }
+
+.loading_page {
+  height: calc(100vh - 6em);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .loading_page img {
+    width: 10em;
+    display: block;
+    margin: auto; }
+  .loading_page div {
+    text-align: center; }
+
+.form-container {
+  position: relative; }
+  .form-container .close-btn {
+    font-size: 24px; }
+  .form-container .close-btn:hover {
+    background-color: transparent; }
+
+@media only screen and (max-width: 600px) {
+  .info-popup {
+    height: auto;
+    max-height: 100vh; } }
+
+.forum {
+  padding: 1em 0; }
+  .forum > .show_flex {
+    justify-content: space-between; }
+
+.main-view {
+  width: 65%; }
+  .main-view .loading {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 12em); }
+    .main-view .loading svg {
+      width: 80px; }
+
+.filter {
+  margin: 1em 0;
+  width: 100%;
+  display: flex; }
+  .filter button {
+    border-radius: 2px;
+    padding: 6px 8px; }
+    .filter button i {
+      font-size: 10px; }
+  .filter button:first-of-type {
+    background-color: #0b6aa4;
+    color: white;
+    margin-right: 1em; }
+  .filter button:last-of-type {
+    color: #0b6aa4;
+    font-weight: 600;
+    border: 1px solid #0b6aa4; }
+
+.main-view__post-container {
+  width: 100%; }
+
+.post {
+  border-radius: 4px;
+  padding: 1em;
+  margin-bottom: 1em;
+  background-color: white; }
+  .post h4 {
+    color: #333; }
+  .post > .show_flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  .post .post__avt {
+    width: 2.5em;
+    height: 2.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0b6aa4;
+    color: white;
+    font-weight: 600;
+    border-radius: 2px; }
+  .post .post__preview {
+    margin-top: 10px;
+    font-size: 500;
+    line-height: 1.25;
+    font-size: 15px;
+    color: #797979; }
+  .post .post__main-info {
+    width: calc(100% - 232px); }
+    .post .post__main-info > .show_flex {
+      margin-top: 6px; }
+      .post .post__main-info > .show_flex .show_flex {
+        font-size: 12px;
+        margin-right: 1em; }
+        .post .post__main-info > .show_flex .show_flex span {
+          font-weight: 700;
+          color: #0b6aa4; }
+        .post .post__main-info > .show_flex .show_flex p {
+          font-weight: 500;
+          color: #7a7a7a; }
+  .post .post__counting {
+    width: 160px;
+    justify-content: flex-end; }
+    .post .post__counting > div {
+      margin-left: 0.5em;
+      background-color: #eef1f6;
+      padding: 0.5em;
+      border-radius: 2px;
+      font-size: 12px;
+      font-weight: 600;
+      color: #0b6aa4; }
+
+.post:last-of-type {
+  margin-bottom: 0; }
+
+.sub-view {
+  width: calc(35% - 1em);
+  background-color: white;
+  height: fit-content;
+  padding: 1em;
+  padding-top: 0;
+  border-radius: 4px; }
+  .sub-view > .show_flex:first-of-type {
+    padding: 1em 0;
+    border-bottom: 2px solid whitesmoke;
+    align-items: center;
+    color: #0b6aa4; }
+    .sub-view > .show_flex:first-of-type button {
+      background-color: #0b6aa4;
+      color: white;
+      border-radius: 2px;
+      width: 2em;
+      height: 2em;
+      margin-right: 1em; }
+    .sub-view > .show_flex:first-of-type h4 {
+      font-size: 18px; }
+  .sub-view .loading {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 13em); }
+    .sub-view .loading svg {
+      width: 80px; }
+
+.trending-post {
+  width: 100%;
+  padding: 1em 0;
+  border-bottom: 2px solid whitesmoke;
+  justify-content: space-between; }
+  .trending-post .trending-post__avt {
+    width: 2em;
+    height: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0b6aa4;
+    color: white;
+    font-weight: 500;
+    border-radius: 2px; }
+  .trending-post .trending-post__info {
+    width: calc(100% - 2.5em); }
+    .trending-post .trending-post__info h4 {
+      font-size: 14px;
+      color: #797979; }
+    .trending-post .trending-post__info p {
+      font-size: 12px;
+      color: #797979;
+      line-height: 1.5;
+      margin-top: 6px; }
+    .trending-post .trending-post__info .show_flex {
+      color: #797979;
+      font-size: 14px;
+      margin-top: 6px; }
 
 .test-page {
   background: white;
@@ -1000,197 +1312,6 @@ button.dropdown-item {
   .test_card {
     width: 25%; } }
 
-.modal {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.2);
-  z-index: 3;
-  display: none; }
-
-.modal.active {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.info-popup {
-  background-color: white; }
-  .info-popup form {
-    width: auto !important;
-    max-width: 100vw;
-    display: block !important;
-    box-shadow: 0 0 2px 0 #757575;
-    min-height: 420px;
-    padding: 1em; }
-    .info-popup form button {
-      width: 5em;
-      height: 2.25em;
-      font-size: 1em;
-      margin: auto;
-      margin-top: 1em;
-      display: block;
-      color: white;
-      background: #0080bb; }
-    .info-popup form button.cancel-btn {
-      background-color: #b94848; }
-    .info-popup form h3 {
-      text-align: center; }
-    .info-popup form input {
-      display: block;
-      height: 2.5em;
-      line-height: 2.5em;
-      width: 100%;
-      padding-left: 0.5em; }
-    .info-popup form input[type="checkbox"] {
-      height: 1.25em;
-      line-height: 1.25em;
-      width: 1.25em;
-      display: block;
-      margin-right: 1em;
-      margin-left: 1.5em; }
-    .info-popup form input[type="file"] {
-      width: 15em;
-      height: auto;
-      line-height: normal; }
-    .info-popup form input[type="text"],
-    .info-popup form input[type="number"] {
-      border: 1px solid #333; }
-    .info-popup form label {
-      display: block; }
-    .info-popup form .col {
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-      width: 300px; }
-    .info-popup form > div > div > label {
-      height: 2.25em;
-      line-height: 2.25em; }
-    .info-popup form .row {
-      align-items: flex-start;
-      justify-content: flex-start;
-      margin-top: 0.25em; }
-    .info-popup form > .row {
-      margin-top: 0.5em; }
-
-.confirm-popup {
-  padding: 1em;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  background: white;
-  border-radius: 0.25em;
-  max-width: 100vw;
-  min-width: 300px;
-  min-height: 200px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  line-height: 1.5em;
-  text-align: center; }
-  .confirm-popup .confirm-btn,
-  .confirm-popup .cancel-btn {
-    width: 5em;
-    height: 2.5em;
-    color: white;
-    margin-top: 1em; }
-  .confirm-popup .confirm-btn {
-    background-color: #00949e; }
-  .confirm-popup .cancel-btn {
-    background-color: #b94848;
-    margin-left: 0.5em; }
-
-.status-popup {
-  padding: 1em;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  background: white;
-  border-radius: 0.25em;
-  max-width: 100vw;
-  min-width: 300px;
-  min-height: 200px;
-  line-height: 1.5em;
-  text-align: center;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-  .status-popup button {
-    width: 5em;
-    height: 2.5em;
-    background: #00949e;
-    color: white;
-    margin-top: 1em;
-    display: block; }
-
-.score-popup {
-  display: flex;
-  max-width: 100%;
-  max-height: 100%;
-  width: 300px;
-  height: 400px;
-  background: white;
-  border-radius: 0.25em;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.25em;
-  position: relative; }
-  .score-popup button {
-    top: 20px;
-    right: 20px;
-    position: absolute;
-    width: 1.75em;
-    height: 1.75em;
-    border-radius: 0.25em;
-    background: #ff6666;
-    color: white; }
-  .score-popup > div {
-    cursor: pointer;
-    width: 6em;
-    height: 2.5em;
-    border: 1px #333 solid;
-    text-align: center;
-    line-height: 2.5em;
-    border-radius: 0.25em;
-    margin-top: 2em;
-    font-size: 0.75em !important; }
-  .score-popup span {
-    margin-top: 1em;
-    width: 7em;
-    height: 7em;
-    line-height: 7em;
-    font-weight: lighter;
-    text-align: center;
-    border-radius: 100%;
-    background: #00949e;
-    color: white;
-    display: block; }
-
-.loading_page {
-  height: calc(100vh - 6em);
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  .loading_page img {
-    width: 10em;
-    display: block;
-    margin: auto; }
-  .loading_page div {
-    text-align: center; }
-
-.form-container {
-  position: relative; }
-  .form-container .close-btn {
-    font-size: 24px; }
-  .form-container .close-btn:hover {
-    background-color: transparent; }
-
-@media only screen and (max-width: 600px) {
-  .info-popup {
-    height: auto;
-    max-height: 100vh; } }
-
 .home_section {
   width: 100%;
   margin: auto;
@@ -1306,6 +1427,28 @@ button.dropdown-item {
   margin-right: auto;
   display: block; }
 
+.banner {
+  width: 100%;
+  height: fit-content;
+  position: relative; }
+  .banner .img-container {
+    display: block;
+    width: 100%;
+    padding-top: 23.5%;
+    /* 1:1 Aspect Ratio */
+    position: relative; }
+    .banner .img-container img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+    .banner .img-container .mobile-display {
+      display: none; }
+
 @media only screen and (max-width: 600px) {
   .home {
     margin-left: 0;
@@ -1326,7 +1469,9 @@ button.dropdown-item {
     width: 70vw;
     margin: auto;
     margin-top: 1em;
-    margin-bottom: 1em; } }
+    margin-bottom: 1em; }
+  .banner .img-container {
+    padding-top: 37.5%; } }
 
 @media only screen and (min-width: 600px) and (max-width: 768px) {
   .home {
@@ -1338,7 +1483,13 @@ button.dropdown-item {
   .skill {
     display: none; }
   .skill-card {
-    width: 35vw; } }
+    width: 35vw; }
+  .banner > div {
+    box-shadow: inset 0 0 10em black; } }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .banner > div {
+    box-shadow: inset 0 0 15em black; } }
 
 .toeic-info {
   height: calc(100vh - 6em);
