--- a/fe/src/scss/App.scss
+++ b/fe/src/scss/App.scss
@@ -2,13 +2,13 @@
 @import "./base";
 @import "./login";
 @import "./nav";
-@import "./banner";
 @import "./footer";
-@import "./test";
 @import "./popup";
-@import "./home";
-@import "./info";
-@import "./admin";
+@import "./page_forum";
+@import "./page_test";
+@import "./page_home";
+@import "./page_info";
+@import "./page_admin";
 @import "./profile";
 .App {
   width: 100vw;
