--- a/fe/src/scss/_variable.scss
+++ b/fe/src/scss/_variable.scss
@@ -6,3 +6,4 @@ $background-blue: #79acff;
 $test-page-main-color: #00949e;
 $alert-color: rgb(185, 72, 72);
 $mini-text-color: rgb(128, 128, 128);
+$sub-text-color: rgb(122, 122, 122);
