--- a/fe/src/scss/_base.scss
+++ b/fe/src/scss/_base.scss
@@ -19,6 +19,9 @@ button {
 a {
   color: $blue;
 }
+.w100 {
+  width: 100%;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -27,7 +30,6 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
-
 .center {
   top: 50%;
   left: 50%;
