forum page + create post + comment

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -410,7 +410,8 @@ ol {
   width: 25%; }
 
 .logo img {
-  width: 120px; }
+  object-fit: contain;
+  height: 50px; }
 
 .dropdown-container {
   margin-left: auto;
@@ -854,21 +855,51 @@ button.dropdown-item {
     max-height: 100vh; } }
 
 .forum {
-  padding: 1em 0; }
+  padding: 1em 0;
+  min-height: calc(100vh - 17em); }
   .forum > .show_flex {
     justify-content: space-between; }
-
-.main-view {
-  width: 65%; }
-  .main-view .loading {
-    width: 100%;
+  .forum .main-view {
+    width: 65%; }
+    .forum .main-view .loading {
+      width: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 12em); }
+      .forum .main-view .loading svg {
+        width: 80px; }
+  .forum .sub-view {
+    width: calc(35% - 1em);
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 12em); }
-    .main-view .loading svg {
-      width: 80px; }
+    height: fit-content;
+    padding: 1em;
+    padding-top: 0;
+    border-radius: 4px; }
+    .forum .sub-view > .show_flex:first-of-type {
+      padding: 1em 0;
+      border-bottom: 2px solid whitesmoke;
+      align-items: center;
+      color: #0b6aa4; }
+      .forum .sub-view > .show_flex:first-of-type button {
+        background-color: #0b6aa4;
+        color: white;
+        border-radius: 2px;
+        width: 2em;
+        height: 2em;
+        margin-right: 1em; }
+      .forum .sub-view > .show_flex:first-of-type h4 {
+        font-size: 18px; }
+    .forum .sub-view .loading {
+      width: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 13em); }
+      .forum .sub-view .loading svg {
+        width: 80px; }
 
 .filter {
   margin: 1em 0;
@@ -895,7 +926,8 @@ button.dropdown-item {
   border-radius: 4px;
   padding: 1em;
   margin-bottom: 1em;
-  background-color: white; }
+  background-color: white;
+  cursor: pointer; }
   .post h4 {
     color: #333; }
   .post > .show_flex {
@@ -917,7 +949,16 @@ button.dropdown-item {
     font-size: 500;
     line-height: 1.25;
     font-size: 15px;
-    color: #797979; }
+    height: 40px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #797979 !important; }
+    .post .post__preview p,
+    .post .post__preview span {
+      color: #797979 !important; }
   .post .post__main-info {
     width: calc(100% - 232px); }
     .post .post__main-info > .show_flex {
@@ -946,37 +987,6 @@ button.dropdown-item {
 .post:last-of-type {
   margin-bottom: 0; }
 
-.sub-view {
-  width: calc(35% - 1em);
-  background-color: white;
-  height: fit-content;
-  padding: 1em;
-  padding-top: 0;
-  border-radius: 4px; }
-  .sub-view > .show_flex:first-of-type {
-    padding: 1em 0;
-    border-bottom: 2px solid whitesmoke;
-    align-items: center;
-    color: #0b6aa4; }
-    .sub-view > .show_flex:first-of-type button {
-      background-color: #0b6aa4;
-      color: white;
-      border-radius: 2px;
-      width: 2em;
-      height: 2em;
-      margin-right: 1em; }
-    .sub-view > .show_flex:first-of-type h4 {
-      font-size: 18px; }
-  .sub-view .loading {
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 13em); }
-    .sub-view .loading svg {
-      width: 80px; }
-
 .trending-post {
   width: 100%;
   padding: 1em 0;
@@ -997,15 +1007,122 @@ button.dropdown-item {
     .trending-post .trending-post__info h4 {
       font-size: 14px;
       color: #797979; }
-    .trending-post .trending-post__info p {
+    .trending-post .trending-post__info .content {
       font-size: 12px;
-      color: #797979;
       line-height: 1.5;
-      margin-top: 6px; }
+      height: 40px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-top: 6px;
+      color: #797979; }
+      .trending-post .trending-post__info .content p,
+      .trending-post .trending-post__info .content span {
+        color: #797979 !important; }
     .trending-post .trending-post__info .show_flex {
       color: #797979;
       font-size: 14px;
       margin-top: 6px; }
+
+.new-post-form {
+  background-color: white;
+  border-radius: 8px;
+  padding: 1em;
+  width: 600px;
+  max-width: calc(100vw - 1em); }
+  .new-post-form h4 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 16px;
+    color: #333; }
+  .new-post-form input {
+    width: 100%;
+    padding: 0.75em 1em;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid #dfdfdf;
+    margin-bottom: 0.75em; }
+  .new-post-form label {
+    width: 5em; }
+  .new-post-form .show_flex {
+    margin-bottom: 16px;
+    align-items: center; }
+  .new-post-form .quill-container {
+    width: 100%;
+    border-radius: 2px;
+    border: 1px solid #dfdfdf; }
+    .new-post-form .quill-container .ql-editor {
+      height: calc(100vh - 400px);
+      overflow-y: scroll; }
+    .new-post-form .quill-container .ql-toolbar {
+      border: none;
+      border-bottom: 1px solid #e2e2e2; }
+    .new-post-form .quill-container .ql-container {
+      border: none; }
+    .new-post-form .quill-container .ql-editor.ql-blank::before {
+      font-style: normal; }
+    .new-post-form .quill-container .ql-toolbar.ql-snow .ql-formats {
+      margin: 0; }
+    .new-post-form .quill-container .ql-header,
+    .new-post-form .quill-container .ql-list,
+    .new-post-form .quill-container .ql-clean,
+    .new-post-form .quill-container .ql-link {
+      display: none !important; }
+    .new-post-form .quill-container .ql-editor {
+      font-size: 15px;
+      color: #333; }
+  .new-post-form .images {
+    margin-top: 0.75em;
+    border-radius: 2px;
+    border: 1px solid #dfdfdf;
+    padding: 0.5em;
+    display: flex; }
+    .new-post-form .images .img-container {
+      display: block;
+      position: relative;
+      margin: auto; }
+      .new-post-form .images .img-container img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+    .new-post-form .images .image {
+      width: 100px;
+      margin-right: 8px; }
+      .new-post-form .images .image .img-container {
+        width: 100%;
+        padding-top: 100%;
+        border: 1px solid #dfdfdf; }
+        .new-post-form .images .image .img-container label {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          font-size: 12px;
+          padding: 4px 8px;
+          color: white;
+          opacity: 0.9; }
+  .new-post-form .action {
+    display: flex;
+    margin-top: 0.75em;
+    justify-content: center; }
+  .new-post-form #submit-btn,
+  .new-post-form #cancel-btn {
+    height: 32px;
+    width: 86px;
+    font-size: 15px;
+    border-radius: 2px; }
+  .new-post-form #submit-btn {
+    color: white;
+    background: #0b78bb; }
+  .new-post-form #cancel-btn {
+    background: #dddddd;
+    margin-left: 1em; }
 
 .test-page {
   background: white;
@@ -1655,6 +1772,199 @@ button.dropdown-item {
       .toeic-info .info-container .toeic-procedures-process {
         background: white;
         width: 100%; } }
+
+.post-page {
+  padding: 1em 0;
+  min-height: calc(100vh - 17em);
+  display: flex;
+  justify-content: space-between; }
+  .post-page .main-view {
+    width: 70%;
+    background: white;
+    padding: 1em;
+    justify-content: space-between;
+    border-radius: 4px; }
+    .post-page .main-view > div:first-of-type {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .post-page .main-view > div:first-of-type .main-view__post__avt {
+        width: 2.5em;
+        height: 2.5em;
+        font-weight: 600;
+        border-radius: 2px;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #0b6aa4; }
+      .post-page .main-view > div:first-of-type .main-view__post__action {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1em; }
+        .post-page .main-view > div:first-of-type .main-view__post__action i {
+          font-size: 30px;
+          color: #8b8b8b; }
+        .post-page .main-view > div:first-of-type .main-view__post__action p {
+          font-size: 26px;
+          color: #4a95c6; }
+    .post-page .main-view > div:last-of-type {
+      width: calc(100% - 56px); }
+      .post-page .main-view > div:last-of-type h3 {
+        color: #333;
+        padding-bottom: 6px; }
+      .post-page .main-view > div:last-of-type .show_flex {
+        padding-bottom: 6px;
+        border-bottom: 2px solid whitesmoke;
+        margin-bottom: 10px; }
+        .post-page .main-view > div:last-of-type .show_flex span {
+          font-size: 14px;
+          color: #7a7a7a; }
+        .post-page .main-view > div:last-of-type .show_flex label {
+          color: #4a95c6;
+          font-size: 14px; }
+      .post-page .main-view > div:last-of-type .content p,
+      .post-page .main-view > div:last-of-type .content span {
+        line-height: 1.5 !important;
+        font-size: 15px !important;
+        color: #333 !important; }
+      .post-page .main-view > div:last-of-type .main-view__comments {
+        margin-top: 1em; }
+        .post-page .main-view > div:last-of-type .main-view__comments h4 {
+          color: #333;
+          padding-bottom: 6px; }
+  .post-page .sub-view {
+    width: calc(30% - 1em);
+    padding: 1em;
+    padding-top: 0;
+    background: white;
+    height: fit-content; }
+    .post-page .sub-view > .show_flex:first-of-type {
+      padding: 1em 0;
+      border-bottom: 2px solid whitesmoke;
+      align-items: center;
+      color: #0b6aa4; }
+      .post-page .sub-view > .show_flex:first-of-type button {
+        background-color: #0b6aa4;
+        color: white;
+        border-radius: 2px;
+        width: 2em;
+        height: 2em;
+        margin-right: 1em; }
+      .post-page .sub-view > .show_flex:first-of-type h4 {
+        font-size: 18px; }
+
+.comment-card {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #f0f0f0;
+  width: 100%;
+  margin-top: 10px; }
+  .comment-card > div:first-of-type {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .comment-card > div:first-of-type .avt {
+      width: 26px;
+      height: 26px;
+      font-size: 13px;
+      font-weight: 600;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #4a95c6;
+      color: white;
+      border-radius: 2px; }
+    .comment-card > div:first-of-type .action {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #8b8b8b; }
+      .comment-card > div:first-of-type .action i {
+        font-size: 20px; }
+      .comment-card > div:first-of-type .action p {
+        color: #8b8b8b; }
+  .comment-card > div:last-of-type {
+    width: calc(100% - 42px); }
+    .comment-card > div:last-of-type span {
+      line-height: 26px;
+      color: #4a95c6;
+      font-size: 15px; }
+    .comment-card > div:last-of-type label {
+      line-height: 26px;
+      font-size: 14px;
+      color: #7a7a7a; }
+
+.comment-input {
+  margin: 0.5em 0;
+  margin-bottom: 1em;
+  border-radius: 2px;
+  border: 1px solid #e2e2e2; }
+  .comment-input .ql-toolbar {
+    border: none;
+    border-bottom: 1px solid #e2e2e2; }
+  .comment-input .ql-container {
+    border: none; }
+  .comment-input .ql-editor.ql-blank::before {
+    font-style: normal; }
+  .comment-input .ql-toolbar.ql-snow .ql-formats {
+    margin: 0; }
+  .comment-input .ql-header,
+  .comment-input .ql-list,
+  .comment-input .ql-clean,
+  .comment-input .ql-link {
+    display: none !important; }
+  .comment-input .ql-editor {
+    font-size: 15px;
+    color: #333; }
+  .comment-input #submit-btn {
+    background: #0b6aa4;
+    color: white;
+    padding: 6px 8px;
+    border-radius: 2px;
+    margin: 15px; }
+
+.related-post {
+  width: 100%;
+  padding: 1em 0;
+  border-bottom: 2px solid whitesmoke;
+  justify-content: space-between; }
+  .related-post .related-post__avt {
+    width: 2em;
+    height: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4a95c6;
+    color: white;
+    font-weight: 500;
+    border-radius: 2px; }
+  .related-post .related-post__info {
+    width: calc(100% - 2.5em); }
+    .related-post .related-post__info h4 {
+      font-size: 14px;
+      color: #797979; }
+    .related-post .related-post__info .content {
+      font-size: 12px;
+      color: #797979;
+      line-height: 1.5;
+      height: 40px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-top: 6px; }
+      .related-post .related-post__info .content p,
+      .related-post .related-post__info .content span {
+        color: #797979 !important;
+        line-height: 1.5 !important; }
+    .related-post .related-post__info .show_flex {
+      color: #797979;
+      font-size: 14px;
+      margin-top: 6px; }
 
 .admin-page {
   width: 100%;
