--- a/fe/src/scss/App.scss
+++ b/fe/src/scss/App.scss
@@ -8,6 +8,7 @@
 @import "./page_test";
 @import "./page_home";
 @import "./page_info";
+@import "./page_post";
 @import "./page_admin";
 @import "./profile";
 .App {
