--- a/fe/src/scss/_page_forum.scss
+++ b/fe/src/scss/_page_forum.scss
@@ -1,20 +1,57 @@
 .forum {
   padding: 1em 0;
+  min-height: calc(100vh - 17em);
   > .show_flex {
     justify-content: space-between;
   }
-}
-.main-view {
-  width: 65%;
-  .loading {
-    width: 100%;
+  .main-view {
+    width: 65%;
+    .loading {
+      width: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 12em);
+      svg {
+        width: 80px;
+      }
+    }
+  }
+  .sub-view {
+    width: calc(35% - 1em);
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 12em);
-    svg {
-      width: 80px;
+    height: fit-content;
+    padding: 1em;
+    padding-top: 0;
+    border-radius: 4px;
+    > .show_flex:first-of-type {
+      padding: 1em 0;
+      border-bottom: 2px solid whitesmoke;
+      align-items: center;
+      color: #0b6aa4;
+      button {
+        background-color: #0b6aa4;
+        color: white;
+        border-radius: 2px;
+        width: 2em;
+        height: 2em;
+        margin-right: 1em;
+      }
+      h4 {
+        font-size: 18px;
+      }
+    }
+    .loading {
+      width: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 13em);
+      svg {
+        width: 80px;
+      }
     }
   }
 }
@@ -48,6 +85,7 @@
   padding: 1em;
   margin-bottom: 1em;
   background-color: white;
+  cursor: pointer;
   h4 {
     color: #333;
   }
@@ -72,7 +110,17 @@
     font-size: 500;
     line-height: 1.25;
     font-size: 15px;
-    color: rgb(121, 121, 121);
+    height: 40px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: rgb(121, 121, 121) !important;
+    p,
+    span {
+      color: rgb(121, 121, 121) !important;
+    }
   }
   .post__main-info {
     width: calc(100% - 232px);
@@ -109,42 +157,6 @@
 .post:last-of-type {
   margin-bottom: 0;
 }
-.sub-view {
-  width: calc(35% - 1em);
-  background-color: white;
-  height: fit-content;
-  padding: 1em;
-  padding-top: 0;
-  border-radius: 4px;
-  > .show_flex:first-of-type {
-    padding: 1em 0;
-    border-bottom: 2px solid whitesmoke;
-    align-items: center;
-    color: #0b6aa4;
-    button {
-      background-color: #0b6aa4;
-      color: white;
-      border-radius: 2px;
-      width: 2em;
-      height: 2em;
-      margin-right: 1em;
-    }
-    h4 {
-      font-size: 18px;
-    }
-  }
-  .loading {
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 13em);
-    svg {
-      width: 80px;
-    }
-  }
-}
 .trending-post {
   width: 100%;
   padding: 1em 0;
@@ -167,16 +179,146 @@
       font-size: 14px;
       color: rgb(121, 121, 121);
     }
-    p {
+    .content {
       font-size: 12px;
-      color: rgb(121, 121, 121);
       line-height: 1.5;
+      height: 40px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
       margin-top: 6px;
+      color: rgb(121, 121, 121);
+      p,
+      span {
+        color: rgb(121, 121, 121) !important;
+      }
     }
     .show_flex {
       color: rgb(121, 121, 121);
       font-size: 14px;
       margin-top: 6px;
     }
+  }
+}
+.new-post-form {
+  background-color: white;
+  border-radius: 8px;
+  padding: 1em;
+  width: 600px;
+  max-width: calc(100vw - 1em);
+  h4 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 16px;
+    color: #333;
+  }
+  input {
+    width: 100%;
+    padding: 0.75em 1em;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid rgb(223, 223, 223);
+    margin-bottom: 0.75em;
+  }
+  label {
+    width: 5em;
+  }
+  .show_flex {
+    margin-bottom: 16px;
+    align-items: center;
+  }
+  .quill-container {
+    width: 100%;
+    border-radius: 2px;
+    border: 1px solid rgb(223, 223, 223);
+    .ql-editor {
+      height: calc(100vh - 400px);
+      overflow-y: scroll;
+    }
+    .ql-toolbar {
+      border: none;
+      border-bottom: 1px solid rgb(226, 226, 226);
+    }
+    .ql-container {
+      border: none;
+    }
+    .ql-editor.ql-blank::before {
+      font-style: normal;
+    }
+    .ql-toolbar.ql-snow .ql-formats {
+      margin: 0;
+    }
+    .ql-header,
+    .ql-list,
+    .ql-clean,
+    .ql-link {
+      display: none !important;
+    }
+    .ql-editor {
+      font-size: 15px;
+      color: #333;
+    }
+  }
+  .images {
+    margin-top: 0.75em;
+    border-radius: 2px;
+    border: 1px solid rgb(223, 223, 223);
+    padding: 0.5em;
+    display: flex;
+    .img-container {
+      display: block;
+      position: relative;
+      margin: auto;
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .image {
+      width: 100px;
+      margin-right: 8px;
+      .img-container {
+        width: 100%;
+        padding-top: 100%;
+        border: 1px solid rgb(223, 223, 223);
+        label {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          font-size: 12px;
+          padding: 4px 8px;
+          color: white;
+          opacity: 0.9;
+        }
+      }
+    }
+  }
+  .action {
+    display: flex;
+    margin-top: 0.75em;
+    justify-content: center;
+  }
+  #submit-btn,
+  #cancel-btn {
+    height: 32px;
+    width: 86px;
+    font-size: 15px;
+    border-radius: 2px;
+  }
+  #submit-btn {
+    color: white;
+    background: #0b78bb;
+  }
+  #cancel-btn {
+    background: rgb(221, 221, 221);
+    margin-left: 1em;
   }
 }
