--- a/fe/src/scss/_page_forum.scss
+++ b/fe/src/scss/_page_forum.scss
@@ -321,4 +321,11 @@
     background: rgb(221, 221, 221);
     margin-left: 1em;
   }
+  .action-msg {
+    font-size: 14px;
+    display: block;
+    text-align: center;
+    margin: auto;
+    margin-top: 10px;
+  }
 }
